--- a/Task-2 - PortFolio Website/index.html
+++ b/Task-2 - PortFolio Website/index.html
@@ -1,1 +1,89 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bhaavani B | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <h2 class="logo">Bhaavani</h2>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#resume">Resume</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Home Section -->
+    <section id="home" class="home">
+        <img src="images/profile.jpg" class="profile-img" alt="Profile">
+        <h1>Bhaavani B</h1>
+        <p>B.Tech Computer Science & Engineering Student</p>
+    </section>
+
+    <!-- About -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>
+            Passionate Computer Science student with strong fundamentals in
+            programming, DBMS, and web development. Interested in applying
+            technology to solve real-world problems.
+        </p>
+    </section>
+
+    <!-- Skills -->
+    <section id="skills" class="skills">
+        <h2>Skills</h2>
+        <div class="skill-box">HTML</div>
+        <div class="skill-box">CSS</div>
+        <div class="skill-box">Java (Basics)</div>
+        <div class="skill-box">DBMS</div>
+        <div class="skill-box">C</div>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project-card">
+            <h3>Image Forgery Detection Website</h3>
+            <p>
+                A deep learning-based website to detect spliced and copy-moved
+                images using ViT-VAE architecture.
+            </p>
+        </div>
+    </section>
+
+    <!-- Resume -->
+    <section id="resume" class="resume">
+        <h2>My Resume</h2>
+        <iframe src="resume/resume.pdf"></iframe>
+        <br>
+        <a href="resume/resume.pdf" download class="btn">Download Resume</a>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>📞 9526845459</p>
+        <p>📧 bhaavanibiju25@gmail.com</p>
+        <p>📍 Anchal, Kollam, Kerala</p>
+        <p><a href="https://www.linkedin.com/in/bhaavani-b-" target="_blank">LinkedIn</a></p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>© 2026 Bhaavani B | Portfolio Website</p>
+    </footer>
+
+</body>
+</html>
+
+
